--- a/settings.html
+++ b/settings.html
@@ -29,7 +29,7 @@
       <span class="desgin"></span>
     </div>
     <ul class="links">
-      <li><a href="./dashboard.html"><i class="fa-solid fa-chart-gantt"></i><span>Dashboard</span></a></li>
+      <li><a href="./index.html"><i class="fa-solid fa-chart-gantt"></i><span>Dashboard</span></a></li>
       <li><a href="./settings.html"><i class="fa-solid fa-gear"></i><span>Settings</span></a></li>
       <li><a href="./profile.html"><i class="fa-solid fa-user"></i><span>Profile</span></a></li>
       <li><a href="./projects.html"><i class="fa-solid fa-diagram-project"></i><span>Projects</span></a></li>
