--- a/index.html
+++ b/index.html
@@ -62,12 +62,11 @@
           <div class="salute">
             <div class="title">
               <h2>Welcome</h2>
-              <p>Elzero</p>
-              <div class="profile-pic">
-                <img src="./images/avatar.png" alt="">
-              </div>
+              <p>Hajeer</p>
             </div>
-            <img src="./images/welcome.png" alt="">
+            <div class="profile-pic">
+              <img src="./images/avatar.png" alt="">
+            </div>
           </div>
           <div class="details">
             <div>
@@ -484,10 +483,18 @@
                 <td>$5300</td>
                 <td>
                   <div class="team">
-                    <img src="./images/team-01.png" alt="">
-                    <img src="./images/team-02.png" alt="">
-                    <img src="./images/team-03.png" alt="">
-                    <img src="./images/team-04.png" alt="">
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
                   </div>
                 </td>
                 <td><span class="link-button pending">Pending</span></td>
@@ -499,9 +506,15 @@
                 <td>$1500</td>
                 <td>
                   <div class="team">
-                    <img src="./images/team-04.png" alt="">
-                    <img src="./images/team-02.png" alt="">
-                    <img src="./images/team-03.png" alt="">
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
                   </div>
                 </td>
                 <td><span class="link-button progressing">In Progress</span></td>
@@ -513,8 +526,12 @@
                 <td>$800</td>
                 <td>
                   <div class="team">
-                    <img src="./images/team-01.png" alt="">
-                    <img src="./images/team-03.png" alt="">
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
                   </div>
                 </td>
                 <td><span class="link-button completed">Completed</span></td>
@@ -526,8 +543,12 @@
                 <td>600$</td>
                 <td>
                   <div class="team">
-                    <img src="./images/team-02.png" alt="">
-                    <img src="./images/team-04.png" alt="">
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
                   </div>
                 </td>
                 <td><span class="link-button completed">Completed</span></td>
@@ -539,8 +560,12 @@
                 <td>$300</td>
                 <td>
                   <div class="team">
-                    <img src="./images/team-03.png" alt="">
-                    <img src="./images/team-05.png" alt="">
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
                   </div>
                 </td>
                 <td><span class="link-button rejected">Rejected</span></td>
@@ -552,10 +577,18 @@
                 <td>$2600</td>
                 <td>
                   <div class="team">
-                    <img src="./images/team-01.png" alt="">
-                    <img src="./images/team-05.png" alt="">
-                    <img src="./images/team-04.png" alt="">
-                    <img src="./images/team-02.png" alt="">
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
+                    <div class="user">
+                      <i class="fa fa-user"></i>
+                    </div>
                   </div>
                 </td>
                 <td><span class="link-button completed">Completed</span></td>
