--- a/projects.html
+++ b/projects.html
@@ -65,11 +65,21 @@
             <p>Elzero Dashboard Project Design And Programming And Hosting</p>
           </div>
           <div class="team">
-            <img src="./images/team-01.png" alt="">
-            <img src="./images/team-02.png" alt="">
-            <img src="./images/team-03.png" alt="">
-            <img src="./images/team-04.png" alt="">
-            <img src="./images/team-05.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:rgb(226, 40, 40); border: 3px solid rgb(226, 40, 40);"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:rgb(226, 40, 40); border: 3px solid rgb(226, 40, 40);"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:rgb(226, 40, 40); border: 3px solid rgb(226, 40, 40);"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:rgb(226, 40, 40); border: 3px solid rgb(226, 40, 40);"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:rgb(226, 40, 40); border: 3px solid rgb(226, 40, 40);"></i>
+            </div>
           </div>
           <div class="about">
             <p>Programming</p>
@@ -91,9 +101,15 @@
             <p>Academy Portal Project Design And Programming</p>
           </div>
           <div class="team">
-            <img src="./images/team-03.png" alt="">
-            <img src="./images/team-04.png" alt="">
-            <img src="./images/team-05.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#22c55e; border: 3px solid #22c55e;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#22c55e; border: 3px solid #22c55e;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#22c55e; border: 3px solid #22c55e;"></i>
+            </div>
           </div>
           <div class="about">
             <p>Programming</p>
@@ -113,9 +129,15 @@
             <p>Chatting Application Project Design</p>
           </div>
           <div class="team">
-            <img src="./images/team-01.png" alt="">
-            <img src="./images/team-02.png" alt="">
-            <img src="./images/team-05.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#3a77d9; border: 3px solid #3a77d9;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#3a77d9; border: 3px solid #3a77d9;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#3a77d9; border: 3px solid #3a77d9;"></i>
+            </div>
           </div>
           <div class="about">
             <p>Desgin</p>
@@ -134,10 +156,18 @@
             <p>Ahmed Dashboard Project Design And Programming And Hosting</p>
           </div>
           <div class="team">
-            <img src="./images/team-01.png" alt="">
-            <img src="./images/team-02.png" alt="">
-            <img src="./images/team-04.png" alt="">
-            <img src="./images/team-05.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#f59e0b; border: 3px solid #f59e0b;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#f59e0b; border: 3px solid #f59e0b;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#f59e0b; border: 3px solid #f59e0b;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#f59e0b; border: 3px solid #f59e0b;"></i>
+            </div>
           </div>
           <div class="about">
             <p>Programming</p>
@@ -147,7 +177,7 @@
           </div>
           <div class="progress-salary">
             <div class="progress">
-              <span class="completion" style="width: 60%; background-color: #22c55e;"></span>
+              <span class="completion" style="width: 60%; background-color: #f59e0b;"></span>
             </div>
             <p class="salary">$ <span>1700</span></p>
           </div>
@@ -159,9 +189,15 @@
             <p>Ahmed Portal Project Design And Programming</p>
           </div>
           <div class="team">
-            <img src="./images/team-01.png" alt="">
-            <img src="./images/team-04.png" alt="">
-            <img src="./images/team-05.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#22c5b8; border: 3px solid #22c5b8;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#22c5b8; border: 3px solid #22c5b8;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#22c5b8; border: 3px solid #22c5b8;"></i>
+            </div>
           </div>
           <div class="about">
             <p>Programming</p>
@@ -169,7 +205,7 @@
           </div>
           <div class="progress-salary">
             <div class="progress">
-              <span class="completion" style="width: 70%; background-color: #22c55e;"></span>
+              <span class="completion" style="width: 70%; background-color: #22c5b8;"></span>
             </div>
             <p class="salary">$ <span>850</span></p>
           </div>
@@ -181,16 +217,22 @@
             <p>Mohamed Application Project Design</p>
           </div>
           <div class="team">
-            <img src="./images/team-01.png" alt="">
-            <img src="./images/team-02.png" alt="">
-            <img src="./images/team-05.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#8e28e2; border: 3px solid #8e28e2;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#8e28e2; border: 3px solid #8e28e2;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#8e28e2; border: 3px solid #8e28e2;"></i>
+            </div>
           </div>
           <div class="about">
             <p>Desgin</p>
           </div>
           <div class="progress-salary">
             <div class="progress">
-              <span class="completion" style="width: 40%; background-color: rgb(226, 40, 40);"></span>
+              <span class="completion" style="width: 40%; background-color: #8e28e2;"></span>
             </div>
             <p class="salary">$ <span>950</span></p>
           </div>
@@ -202,10 +244,18 @@
             <p>Mohamed Dashboard Project Design And Programming And Hosting</p>
           </div>
           <div class="team">
-            <img src="./images/team-02.png" alt="">
-            <img src="./images/team-03.png" alt="">
-            <img src="./images/team-04.png" alt="">
-            <img src="./images/team-05.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#7cc522; border: 3px solid #7cc522;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#7cc522; border: 3px solid #7cc522;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#7cc522; border: 3px solid #7cc522;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#7cc522; border: 3px solid #7cc522;"></i>
+            </div>
           </div>
           <div class="about">
             <p>Programming</p>
@@ -215,7 +265,7 @@
           </div>
           <div class="progress-salary">
             <div class="progress">
-              <span class="completion" style="width: 70%; background-color: #22c55e;"></span>
+              <span class="completion" style="width: 70%; background-color: #7cc522;"></span>
             </div>
             <p class="salary">$ <span>950</span></p>
           </div>
@@ -227,9 +277,15 @@
             <p>Mohamed Portal Project Design And Programming</p>
           </div>
           <div class="team">
-            <img src="./images/team-01.png" alt="">
-            <img src="./images/team-03.png" alt="">
-            <img src="./images/team-05.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#c52279; border: 3px solid #c52279;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#c52279; border: 3px solid #c52279;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#c52279; border: 3px solid #c52279;"></i>
+            </div>
           </div>
           <div class="about">
             <p>Programming</p>
@@ -237,7 +293,7 @@
           </div>
           <div class="progress-salary">
             <div class="progress">
-              <span class="completion" style="width: 60%; background-color: #22c55e;"></span>
+              <span class="completion" style="width: 60%; background-color: #c52279;"></span>
             </div>
             <p class="salary">$ <span>1650</span></p>
           </div>
@@ -249,16 +305,22 @@
             <p>Jawad Application Project Design</p>
           </div>
           <div class="team">
-            <img src="./images/team-02.png" alt="">
-            <img src="./images/team-03.png" alt="">
-            <img src="./images/team-04.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#ed1ad8; border: 3px solid #ed1ad8;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#ed1ad8; border: 3px solid #ed1ad8;"></i>
+            </div>
+            <div class="user">
+              <i class="fa fa-user" style="color:#ed1ad8; border: 3px solid #ed1ad8;"></i>
+            </div>
           </div>
           <div class="about">
             <p>Desgin</p>
           </div>
           <div class="progress-salary">
             <div class="progress">
-              <span class="completion" style="width: 90%; background-color: #22c55e;"></span>
+              <span class="completion" style="width: 90%; background-color: #ed1ad8;"></span>
             </div>
             <p class="salary">$ <span>950</span></p>
           </div>
