--- a/courses.html
+++ b/courses.html
@@ -61,12 +61,14 @@
         <div class="course">
           <img src="./images/course-01.jpg" alt="">
           <div class="profile-photo">
-            <img src="./images/team-01.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#ed1ad8; border: 3px solid #ed1ad8;"></i>
+            </div>
           </div>
           <div class="details">
             <p>Mastering Web Desgin</p>
             <p>Master The Art Of Web Designing And Mocking,
-               Prototyping And Creating Web Design Architecture</p>
+              Prototyping And Creating Web Design Architecture</p>
           </div>
           <div class="info">
             <a href="#" class="link-button">Course Info</a>
@@ -85,12 +87,14 @@
         <div class="course">
           <img src="./images/course-02.jpg" alt="">
           <div class="profile-photo">
-            <img src="./images/team-02.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#1a79ed; border: 3px solid #1a79ed;"></i>
+            </div>
           </div>
           <div class="details">
             <p>Data Structure And Algorithms</p>
             <p>Master The Art Of Data Strcuture And Famous Algorithms
-               Like Sorting, Dividing And Conquering</p>
+              Like Sorting, Dividing And Conquering</p>
           </div>
           <div class="info">
             <a href="#" class="link-button">Course Info</a>
@@ -109,12 +113,14 @@
         <div class="course">
           <img src="./images/course-03.jpg" alt="">
           <div class="profile-photo">
-            <img src="./images/team-03.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#1aedd1; border: 3px solid #1aedd1;"></i>
+            </div>
           </div>
           <div class="details">
             <p>Responsive Web Design</p>
             <p>Mastering Responsive Web Design And Media Queries
-               And Know Everything About Breakpoints</p>
+              And Know Everything About Breakpoints</p>
           </div>
           <div class="info">
             <a href="#" class="link-button">Course Info</a>
@@ -133,12 +139,14 @@
         <div class="course">
           <img src="./images/course-04.jpg" alt="">
           <div class="profile-photo">
-            <img src="./images/team-04.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#ed1a25; border: 3px solid #ed1a25;"></i>
+            </div>
           </div>
           <div class="details">
             <p>Mastering Python</p>
             <p>Mastering Python To Prepare For Data Science And AI
-               And Automating Things in Your Life</p>
+              And Automating Things in Your Life</p>
           </div>
           <div class="info">
             <a href="#" class="link-button">Course Info</a>
@@ -157,12 +165,14 @@
         <div class="course">
           <img src="./images/course-05.jpg" alt="">
           <div class="profile-photo">
-            <img src="./images/team-05.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#1aed28; border: 3px solid #1aed28;"></i>
+            </div>
           </div>
           <div class="details">
             <p>PHP Examples</p>
             <p>PHP Tutorials And Examples And Practice On
-               Web Application And Connecting With Databases</p>
+              Web Application And Connecting With Databases</p>
           </div>
           <div class="info">
             <a href="#" class="link-button">Course Info</a>
@@ -181,12 +191,14 @@
         <div class="course">
           <img src="./images/course-01.jpg" alt="">
           <div class="profile-photo">
-            <img src="./images/team-01.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#bfed1a; border: 3px solid #bfed1a;"></i>
+            </div>
           </div>
           <div class="details">
             <p>Mastering Web Desgin</p>
             <p>Master The Art Of Web Designing And Mocking,
-               Prototyping And Creating Web Design Architecture</p>
+              Prototyping And Creating Web Design Architecture</p>
           </div>
           <div class="info">
             <a href="#" class="link-button">Course Info</a>
@@ -205,12 +217,14 @@
         <div class="course">
           <img src="./images/course-03.jpg" alt="">
           <div class="profile-photo">
-            <img src="./images/team-03.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#ed991a; border: 3px solid #ed991a;"></i>
+            </div>
           </div>
           <div class="details">
             <p>Responsive Web Design</p>
             <p>Mastering Responsive Web Design And Media Queries
-               And Know Everything About Breakpoints</p>
+              And Know Everything About Breakpoints</p>
           </div>
           <div class="info">
             <a href="#" class="link-button">Course Info</a>
@@ -229,12 +243,14 @@
         <div class="course">
           <img src="./images/course-05.jpg" alt="">
           <div class="profile-photo">
-            <img src="./images/team-05.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#211aed; border: 3px solid #211aed;"></i>
+            </div>
           </div>
           <div class="details">
             <p>PHP Examples</p>
             <p>PHP Tutorials And Examples And Practice On
-               Web Application And Connecting With Databases</p>
+              Web Application And Connecting With Databases</p>
           </div>
           <div class="info">
             <a href="#" class="link-button">Course Info</a>
@@ -253,12 +269,14 @@
         <div class="course">
           <img src="./images/course-02.jpg" alt="">
           <div class="profile-photo">
-            <img src="./images/team-02.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#589cb5; border: 3px solid #589cb5;"></i>
+            </div>
           </div>
           <div class="details">
             <p>Data Structure And Algorithms</p>
             <p>Master The Art Of Data Strcuture And Famous Algorithms
-               Like Sorting, Dividing And Conquering</p>
+              Like Sorting, Dividing And Conquering</p>
           </div>
           <div class="info">
             <a href="#" class="link-button">Course Info</a>
@@ -277,12 +295,14 @@
         <div class="course">
           <img src="./images/course-04.jpg" alt="">
           <div class="profile-photo">
-            <img src="./images/team-04.png" alt="">
+            <div class="user">
+              <i class="fa fa-user" style="color:#b56158; border: 3px solid #b56158;"></i>
+            </div>
           </div>
           <div class="details">
             <p>Mastering Python</p>
             <p>Mastering Python To Prepare For Data Science And AI
-               And Automating Things in Your Life</p>
+              And Automating Things in Your Life</p>
           </div>
           <div class="info">
             <a href="#" class="link-button">Course Info</a>
